fix(bridge-history-api): add redis tls config InsecureSkipVerify (#1068)
Co-authored-by: colinlyguo <colinlyguo@users.noreply.github.com>

--- a/bridge-history-api/conf/config.json
+++ b/bridge-history-api/conf/config.json
@@ -46,6 +46,8 @@
 		"address": "localhost:6379",
 		"username": "default",
 		"password": "",
-		"local": true
+		"local": true,
+		"minIdleConns": 10,
+		"readTimeoutMs": 500
 	}
 }
