feat(gas-oracle & rollup-relayer): graceful shutdown

--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -18,7 +18,9 @@
         "max_gas_price": 10000000000,
         "tx_type": "LegacyTx",
         "min_balance": 100000000000000000000,
-        "pending_limit": 10
+        "pending_limit": 10,
+        "max_close_attempts": 12,
+        "close_attempt_interval_ms": 10000
       },
       "gas_oracle_config": {
         "min_gas_price": 0,
@@ -46,7 +48,9 @@
         "max_gas_price": 10000000000,
         "tx_type": "LegacyTx",
         "min_balance": 100000000000000000000,
-        "pending_limit": 10
+        "pending_limit": 10,
+        "max_close_attempts": 12,
+        "close_attempt_interval_ms": 10000
       },
       "gas_oracle_config": {
         "min_gas_price": 0,
