--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -44,7 +44,7 @@
         "escalate_multiple_num": 11,
         "escalate_multiple_den": 10,
         "max_gas_price": 10000000000,
-        "tx_type": "LegacyTx",
+        "tx_type": "DynamicFeeTx",
         "min_balance": 100000000000000000000,
         "pending_limit": 10
       },
