revert client changes

--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -1,14 +1,14 @@
 {
   "l1_config": {
     "confirmations": "0x6",
-    "endpoint": "DUMMY_ENDPOINT",
+    "endpoint": "https://rpc.ankr.com/eth",
     "l1_message_queue_address": "0x0000000000000000000000000000000000000000",
     "scroll_chain_address": "0x0000000000000000000000000000000000000000",
     "start_height": 0,
     "relayer_config": {
       "gas_price_oracle_address": "0x0000000000000000000000000000000000000000",
       "sender_config": {
-        "endpoint": "https://sepolia-rpc.scroll.io",
+        "endpoint": "https://rpc.scroll.io",
         "check_pending_time": 2,
         "check_balance_time": 100,
         "escalate_blocks": 100,
@@ -29,14 +29,14 @@
   },
   "l2_config": {
     "confirmations": "0x1",
-    "endpoint": "https://sepolia-rpc.scroll.io",
+    "endpoint": "https://rpc.scroll.io",
     "l2_messenger_address": "0x0000000000000000000000000000000000000000",
     "l2_message_queue_address": "0x0000000000000000000000000000000000000000",
     "relayer_config": {
       "rollup_contract_address": "0x0000000000000000000000000000000000000000",
       "gas_price_oracle_address": "0x0000000000000000000000000000000000000000",
       "sender_config": {
-        "endpoint": "https://sepolia-rpc.scroll.io",
+        "endpoint": "https://rpc.ankr.com/eth",
         "check_pending_time": 10,
         "check_balance_time": 100,
         "escalate_blocks": 100,
