--- a/contracts/package.json
+++ b/contracts/package.json
@@ -12,6 +12,7 @@
     "lint:ts": "./node_modules/.bin/prettier --write 'integration-test/**/*.ts' 'scripts/**/*.ts' *.ts",
     "lint": "yarn lint:ts && yarn lint:sol",
     "coverage": "hardhat coverage",
+    "coverage:forge": "forge coverage",
     "prepare": "cd .. && husky install contracts/.husky"
   },
   "devDependencies": {
