--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -9,7 +9,8 @@
       "params_path": "",
       "assets_path": ""
     },
-    "max_verifier_workers": 4
+    "max_verifier_workers": 4,
+    "min_prover_version": "v1.0.0"
   },
   "db": {
     "driver_name": "postgres",
