--- a/common/docker-compose/l1/consensus/config.yml
+++ b/common/docker-compose/l1/consensus/config.yml
@@ -18,11 +18,12 @@ CAPELLA_FORK_EPOCH: 0
 CAPELLA_FORK_VERSION: 0x20000092
 MAX_WITHDRAWALS_PER_PAYLOAD: 16
 
+DENEB_FORK_EPOCH: 1
 DENEB_FORK_VERSION: 0x20000093
 
 # Time parameters
-SECONDS_PER_SLOT: 3
-SLOTS_PER_EPOCH: 6
+SECONDS_PER_SLOT: 2
+SLOTS_PER_EPOCH: 2
 
 # Deposit contract
 DEPOSIT_CONTRACT_ADDRESS: 0x4242424242424242424242424242424242424242
